--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Portefolio</title>
+        <title>Portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            
+            <div class="nav">
+                <a href="/">Home</a>
+                <a href="/projects">Projects</a>
+                <a href="/corriculum-vitae">CV</a>
+                <a href="/contact">Contact</a>
+            </div>
         </header>
+        <main>
+            <div>
+                
+            </div>
+        </main>
         <footer>
             <small>© <script>document.write(new Date().getFullYear())</script> Maren Stenersen. All Rights Reserved.</small>
         </footer>
