--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
             </div>
         </main>
         <footer>
-            <small>© <script>document.write(new Date().getFullYear())</script> Maren Stenersen. All Rights Reserved.</small>
+            <small>
+                © <script>document.write(new Date().getFullYear())</script> Maren Stenersen. All Rights Reserved.
+            </small>
         </footer>
     </body>
 </html>
