--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,16 @@
             </div>
         </header>
         <main>
-            <div>
-                
+            <div class="portrait">
+                <img src="" alt="Headshot">
+            </div>
+            <div class="showcase">
+                <img src="" alt="">
             </div>
         </main>
         <footer>
             <small>
-                © <script>document.write(new Date().getFullYear())</script> Maren Stenersen. All Rights Reserved.
+                © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
             </small>
         </footer>
     </body>
