--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         </main>
         <footer>
             <small>
-                © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
+                © <script>document.write(new Date("November 28, 2024 13:22:00").getFullYear())</script> by Maren Stenersen. All Rights Reserved.
             </small>
         </footer>
     </body>
