--- a/src/index.html
+++ b/src/index.html
@@ -9,24 +9,25 @@
     </head>
     <body>
         <header>
+            <div class="logo">
+                <img src="" alt="Logo">
+            </div>
             <div class="nav">
-                <a href="/">Home</a>
-                <a href="/projects">Projects</a>
-                <a href="/corriculum-vitae">CV</a>
+                <a href="/">Works</a>
+                <a href="/about">About</a>
                 <a href="/contact">Contact</a>
             </div>
         </header>
         <main>
-            <div class="portrait">
-                <img src="" alt="Headshot">
-            </div>
             <div class="showcase">
-                <img src="" alt="">
+                <div class="">
+                    <img src="" alt="">
+                </div>
             </div>
         </main>
         <footer>
             <small>
-                © <script>document.write(new Date("November 28, 2024 13:22:00").getFullYear())</script> by Maren Stenersen. All Rights Reserved.
+                Copyright © <script>document.write(new Date("November 28, 2024 13:22:00").getFullYear())</script> by Maren Stenersen. All Rights Reserved.
             </small>
         </footer>
     </body>
