--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,13 @@
         </header>
         <main>
             <div class="showcase">
-                <div class="">
+                <div class="card1">
+                    <img src="" alt="">
+                </div>
+                <div class="card2">
+                    <img src="" alt="">
+                </div>
+                <div class="card3">
                     <img src="" alt="">
                 </div>
             </div>
