--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,20 @@
         </header>
         <main>
             <div class="showcase">
-                <div class="card1">
-                    <img src="" alt="">
+                <div class="row-1">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
                 </div>
-                <div class="card2">
-                    <img src="" alt="">
+                <div class="row-2">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
                 </div>
-                <div class="card3">
-                    <img src="" alt="">
+                <div class="row-3">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
                 </div>
             </div>
         </main>
