--- a/src/index.html
+++ b/src/index.html
@@ -21,26 +21,20 @@
         </header>
         <main>
             <div class="showcase">
-                <div class="row-1">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                </div>
-                <div class="row-2">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                </div>
-                <div class="row-3">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                </div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
         </main>
         <footer>
             <small>
-                Copyright © <script>document.write(new Date("November 28, 2024 13:22:00").getFullYear())</script> by Maren Stenersen. All Rights Reserved.
+                Copyright © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
             </small>
         </footer>
     </body>
