--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
                 <img src="" alt="Logo">
             </div>
             <div class="nav">
-                <a href="/">Works</a>
+                <a href="/">Projects</a>
                 <a href="/about">About</a>
                 <a href="/contact">Contact</a>
             </div>
