--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <img src="" alt="Logo">
             </div>
             <div class="nav">
-                <a href="/">Projects</a>
-                <a href="/about">About</a>
-                <a href="/contact">Contact</a>
+                <a class="active" href="index.html">Projects</a>
+                <a href="/assets/pages/about.html">About</a>
+                <a href="/assets/pages/contact.html">Contact</a>
             </div>
         </header>
         <main>
