--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Portfolio</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/styles/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -15,8 +15,8 @@
             </div>
             <div class="nav">
                 <a class="active" href="index.html">Projects</a>
-                <a href="/assets/pages/about.html">About</a>
-                <a href="/assets/pages/contact.html">Contact</a>
+                <a href="assets/pages/about.html">About</a>
+                <a href="assets/pages/contact.html">Contact</a>
             </div>
         </header>
         <main>
