--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="assets/styles/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <div class="logo">
+                <img src="" alt="Logo">
+            </div>
+            <div class="nav">
+                <a href="index.html">Projects</a>
+                <a href="/assets/pages/about.html">About</a>
+                <a class="active" href="/assets/pages/contact.html">Contact</a>
+            </div>
+        </header>
+        <main>
+            
+        </main>
+        <footer>
+            <small>
+                Copyright © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
+            </small>
+        </footer>
+    </body>
+</html>
