--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
             </div>
             <div class="nav">
                 <a class="active" href="/index.html">Projects</a>
-                <a href="/assets/pages/about.html">About</a>
-                <a href="/assets/pages/contact.html">Contact</a>
+                <a class="nav-button" href="/assets/pages/about.html">About</a>
+                <a class="nav-button" href="/assets/pages/contact.html">Contact</a>
             </div>
         </header>
         <main>
             <div class="showcase">
-                <div class="card"></div>
+                <div class="card">
+                    <div class="project">
+                        <h2>Schweigårds vei 30A</h2>
+                    </div>
+                </div>
                 <div class="card"></div>
                 <div class="card"></div>
                 <div class="card"></div>
