--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -14,8 +14,8 @@
                 <img src="" alt="Logo">
             </div>
             <div class="nav">
-                <a href="/index.html">Projects</a>
-                <a href="/assets/pages/about.html">About</a>
+                <a class="nav-button" href="/index.html">Projects</a>
+                <a class="nav-button" href="/assets/pages/about.html">About</a>
                 <a class="active" href="/assets/pages/contact.html">Contact</a>
             </div>
         </header>
