--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
                 Copyright © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
             </small>
         </footer>
-        <script src="/assets/script.js"></script>
+        <script src="/assets/js/script.js"></script>
     </body>
 </html>
