script.js and styling

--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
             <div class="showcase">
                 <div class="card">
                     <div class="project">
-                        <h2>Schweigårds vei 30A</h2>
+                        <p>Schweigårds vei 30A</p>
                     </div>
                 </div>
-                <div class="card"></div>
+                <div class="card">
+                    <div class="project">
+                        <p>Placeholder</p>
+                    </div>
+                </div>
                 <div class="card"></div>
                 <div class="card"></div>
                 <div class="card"></div>
