--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -19,10 +19,18 @@
                 <a class="nav-button" href="/assets/pages/contact.html">Contact</a>
             </div>
         </header>
-        <main>
-            
+        <main class="about-main">
+            <div class="about-container">
+                <div class="headshot">
+                    <img src="" alt="Headshot">
+                </div>
+                <div class="text-box">
+                    <h1>I'm Maren Stenersen</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus neque eius distinctio, alias, vero exercitationem, nobis voluptatem delectus saepe magni commodi consectetur cumque unde vel possimus sint vitae eaque laudantium!</p>
+                </div>
+            </div>
         </main>
-        <footer>
+        <footer class="about-footer">
             <small>
                 Copyright © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
             </small>
