--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -22,7 +22,7 @@
         <main>
             
         </main>
-        <footer>
+        <footer class="contact-footer">
             <small>
                 Copyright © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
             </small>
