--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="showcase">
                 <div class="card">
                     <div class="project">
-                        <p>Schweigårds vei 30A</p>
+                        <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
@@ -31,13 +31,41 @@
                         <p>Placeholder</p>
                     </div>
                 </div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+                    <div class="project">
+                        <p>Placeholder</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="project">
+                        <p>Placeholder</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="project">
+                        <p>Placeholder</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="project">
+                        <p>Placeholder</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="project">
+                        <p>Placeholder</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="project">
+                        <p>Placeholder</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="project">
+                        <p>Placeholder</p>
+                    </div>
+                </div>
             </div>
         </main>
         <footer>
