--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -35,5 +35,6 @@
                 Copyright © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
             </small>
         </footer>
+        <script src="/assets/js/script.js"></script>
     </body>
 </html>
