Added contact links

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -19,8 +19,20 @@
                 <a class="active" href="/assets/pages/contact.html">Contact</a>
             </div>
         </header>
-        <main>
-            
+        <main class="contact-main">
+            <div class="contact-container">
+                <div class="links">
+                    <a class="instagram" href="https://instagram.com">
+                        <img src="/assets/images/icons/instagram.png" alt="instagram">
+                    </a>
+                    <a class="linkedin" href="https://www.linkedin.com">
+                        <img src="/assets/images/icons/linkedin.png" alt="linkedin">
+                    </a>
+                    <a class="facebook" href="https://facebook.com">
+                        <img src="/assets/images/icons/facebook.png" alt="facebook">
+                    </a>
+                </div>
+            </div>
         </main>
         <footer class="contact-footer">
             <small>
