--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -22,13 +22,13 @@
         <main class="contact-main">
             <div class="contact-container">
                 <div class="links">
-                    <a class="instagram" href="https://instagram.com">
+                    <a class="instagram" href="https://instagram.com" target="_blank" rel="noreferrer noopener">
                         <img src="/assets/images/icons/instagram.png" alt="instagram">
                     </a>
-                    <a class="linkedin" href="https://www.linkedin.com">
+                    <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
                         <img src="/assets/images/icons/linkedin.png" alt="linkedin">
                     </a>
-                    <a class="facebook" href="https://facebook.com">
+                    <a class="facebook" href="https://facebook.com" target="_blank" rel="noreferrer noopener">
                         <img src="/assets/images/icons/facebook.png" alt="facebook">
                     </a>
                 </div>
