Started on animations

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -21,6 +21,9 @@
         </header>
         <main class="contact-main">
             <div class="contact-container">
+                <div class="info">
+                    
+                </div>
                 <div class="links">
                     <a class="instagram" href="https://instagram.com" target="_blank" rel="noreferrer noopener">
                         <img src="/assets/images/icons/instagram.png" alt="instagram">
