--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="" alt="Logo">
+                <img src="/android-chrome-192x192.png" alt="logo">
             </div>
             <div class="nav">
                 <a class="nav-button" href="/index.html">Projects</a>
