--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -7,11 +7,15 @@
         <title>About</title>
         <link rel="stylesheet" href="/assets/styles/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
     </head>
     <body>
         <header>
             <div class="logo">
-                <img src="" alt="Logo">
+                <img src="/android-chrome-192x192.png" alt="logo">
             </div>
             <div class="nav">
                 <a class="nav-button" href="/index.html">Projects</a>
