--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="/assets/images/android-chrome-192x192.png" alt="logo">
+                <img src="/android-chrome-192x192.png" alt="logo">
             </div>
             <div class="nav">
                 <a class="active" href="/index.html">Projects</a>
