--- a/assets/pages/projects/placeholderName.html
+++ b/assets/pages/projects/placeholderName.html
@@ -24,12 +24,14 @@
             </div>
         </header>
         <main>
-            <div class="title">
-                <h1>Project-name</h1>
-                <p>Sample text, brief description</p>
-            </div>
-            <div>
-                
+            <div class="project-container">
+                <div class="title">
+                    <h1>Project-name</h1>
+                    <p>Sample text, brief description</p>
+                </div>
+                <div>
+                    
+                </div>
             </div>
         </main>
         <footer>
