--- a/index.html
+++ b/index.html
@@ -26,47 +26,47 @@
         <main>
             <div class="showcase">
                 <div class="card">
-                    <div class="project">
+                    <div class="project-name">
                         <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project">
+                    <div class="project-name">
                         <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project">
+                    <div class="project-name">
                         <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project">
+                    <div class="project-name">
                         <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project">
+                    <div class="project-name">
                         <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project">
+                    <div class="project-name">
                         <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project">
+                    <div class="project-name">
                         <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project">
+                    <div class="project-name">
                         <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project">
+                    <div class="project-name">
                         <p>Placeholder</p>
                     </div>
                 </div>
