--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <main>
             <div class="showcase">
                 <div class="card">
+                    <div class="project-image">
+                        <a href"/assets/pages/projects/placeholderName.html">
+                            <img src="/assets/images/" alt="project-name">
+                        </a>
+                    </div>
                     <div class="project-name">
                         <p>Placeholder</p>
                     </div>
