--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="showcase">
                 <div class="card">
                     <div class="project-image">
-                        <a href"/assets/pages/projects/placeholderName.html">
+                        <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
                     </div>
