--- a/index.html
+++ b/index.html
@@ -26,53 +26,93 @@
         <main>
             <div class="showcase">
                 <div class="card">
+                    <div class="project-name">
+                        <p>Placeholder</p>
+                    </div>
                     <div class="project-image">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
                     </div>
+                </div>
+                <div class="card">
                     <div class="project-name">
                         <p>Placeholder</p>
+                    </div>
+                    <div class="project-image">
+                        <a href="/assets/pages/projects/placeholderName.html">
+                            <img src="/assets/images/" alt="project-name">
+                        </a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="project-name">
                         <p>Placeholder</p>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="project-name">
-                        <p>Placeholder</p>
+                    <div class="project-image">
+                        <a href="/assets/pages/projects/placeholderName.html">
+                            <img src="/assets/images/" alt="project-name">
+                        </a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="project-name">
                         <p>Placeholder</p>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="project-name">
-                        <p>Placeholder</p>
+                    <div class="project-image">
+                        <a href="/assets/pages/projects/placeholderName.html">
+                            <img src="/assets/images/" alt="project-name">
+                        </a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="project-name">
                         <p>Placeholder</p>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="project-name">
-                        <p>Placeholder</p>
+                    <div class="project-image">
+                        <a href="/assets/pages/projects/placeholderName.html">
+                            <img src="/assets/images/" alt="project-name">
+                        </a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="project-name">
                         <p>Placeholder</p>
                     </div>
+                    <div class="project-image">
+                        <a href="/assets/pages/projects/placeholderName.html">
+                            <img src="/assets/images/" alt="project-name">
+                        </a>
+                    </div>
                 </div>
                 <div class="card">
                     <div class="project-name">
                         <p>Placeholder</p>
+                    </div>
+                    <div class="project-image">
+                        <a href="/assets/pages/projects/placeholderName.html">
+                            <img src="/assets/images/" alt="project-name">
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="project-name">
+                        <p>Placeholder</p>
+                    </div>
+                    <div class="project-image">
+                        <a href="/assets/pages/projects/placeholderName.html">
+                            <img src="/assets/images/" alt="project-name">
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="project-name">
+                        <p>Placeholder</p>
+                    </div>
+                    <div class="project-image">
+                        <a href="/assets/pages/projects/placeholderName.html">
+                            <img src="/assets/images/" alt="project-name">
+                        </a>
                     </div>
                 </div>
             </div>
