--- a/index.html
+++ b/index.html
@@ -26,90 +26,90 @@
         <main>
             <div class="showcase">
                 <div class="card">
-                    <div class="project-name">
+                    <div class="project-name-container">
                         <p>Placeholder</p>
                     </div>
-                    <div class="project-image">
+                    <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name">
+                    <div class="project-name-container">
                         <p>Placeholder</p>
                     </div>
-                    <div class="project-image">
+                    <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name">
+                    <div class="project-name-container">
                         <p>Placeholder</p>
                     </div>
-                    <div class="project-image">
+                    <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name">
+                    <div class="project-name-container">
                         <p>Placeholder</p>
                     </div>
-                    <div class="project-image">
+                    <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name">
+                    <div class="project-name-container">
                         <p>Placeholder</p>
                     </div>
-                    <div class="project-image">
+                    <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name">
+                    <div class="project-name-container">
                         <p>Placeholder</p>
                     </div>
-                    <div class="project-image">
+                    <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name">
+                    <div class="project-name-container">
                         <p>Placeholder</p>
                     </div>
-                    <div class="project-image">
+                    <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name">
+                    <div class="project-name-container">
                         <p>Placeholder</p>
                     </div>
-                    <div class="project-image">
+                    <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name">
+                    <div class="project-name-container">
                         <p>Placeholder</p>
                     </div>
-                    <div class="project-image">
+                    <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
