Added back button

--- a/assets/pages/projects/placeholderName.html
+++ b/assets/pages/projects/placeholderName.html
@@ -24,6 +24,11 @@
             </div>
         </header>
         <main>
+            <div class="back-button">
+                <a href="javascript:window.history.back();">
+                    <img src="/assets/images/icons/left-arrow-in-circular-button-black-symbol.png">
+                </a>
+            </div>
             <div class="project-container">
                 <div class="title">
                     <h1>Project-name</h1>
