--- a/index.html
+++ b/index.html
@@ -26,93 +26,93 @@
         <main>
             <div class="showcase">
                 <div class="card">
-                    <div class="project-name-container">
-                        <p>Placeholder</p>
-                    </div>
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/" alt="project-name">
+                            <img src="/assets/images/hero-image.jpg" alt="project-name">
                         </a>
+                    </div>
+                    <div class="project-name-container">
+                        <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name-container">
-                        <p>Placeholder</p>
-                    </div>
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
+                    </div>
+                    <div class="project-name-container">
+                        <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name-container">
-                        <p>Placeholder</p>
-                    </div>
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
+                    </div>
+                    <div class="project-name-container">
+                        <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name-container">
-                        <p>Placeholder</p>
-                    </div>
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
+                    </div>
+                    <div class="project-name-container">
+                        <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name-container">
-                        <p>Placeholder</p>
-                    </div>
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
+                    </div>
+                    <div class="project-name-container">
+                        <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name-container">
-                        <p>Placeholder</p>
-                    </div>
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
+                    </div>
+                    <div class="project-name-container">
+                        <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name-container">
-                        <p>Placeholder</p>
-                    </div>
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
+                    </div>
+                    <div class="project-name-container">
+                        <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name-container">
-                        <p>Placeholder</p>
-                    </div>
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
+                    </div>
+                    <div class="project-name-container">
+                        <p>Placeholder</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="project-name-container">
-                        <p>Placeholder</p>
-                    </div>
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
                             <img src="/assets/images/" alt="project-name">
                         </a>
+                    </div>
+                    <div class="project-name-container">
+                        <p>Placeholder</p>
                     </div>
                 </div>
             </div>
