--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -35,7 +35,7 @@
                     <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
                         <img src="/assets/images/icons/linkedin.png" alt="linkedin">
                     </a>
-                    <a class="facebook" href="https://facebook.com" target="_blank" rel="noreferrer noopener">
+                    <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
                         <img src="/assets/images/icons/facebook.png" alt="facebook">
                     </a>
                 </div>
