--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -38,6 +38,17 @@
             <small>
                 Copyright © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
             </small>
+            <div class="footer-links">
+                <a class="instagram" href="https://instagram.com" target="_blank" rel="noreferrer noopener">
+                    <img src="/assets/images/icons/instagram.png" alt="instagram">
+                </a>
+                <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
+                    <img src="/assets/images/icons/linkedin.png" alt="linkedin">
+                </a>
+                <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
+                    <img src="/assets/images/icons/facebook.png" alt="facebook">
+                </a>
+            </div>
         </footer>
         <script src="/assets/js/script.js"></script>
     </body>
