--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="card">
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/" alt="project-name">
+                            <img src="/assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -48,7 +48,7 @@
                 <div class="card">
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/" alt="project-name">
+                            <img src="/assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -58,7 +58,7 @@
                 <div class="card">
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/" alt="project-name">
+                            <img src="/assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -68,7 +68,7 @@
                 <div class="card">
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/" alt="project-name">
+                            <img src="/assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -78,7 +78,7 @@
                 <div class="card">
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/" alt="project-name">
+                            <img src="/assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -88,7 +88,7 @@
                 <div class="card">
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/" alt="project-name">
+                            <img src="/assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -98,7 +98,7 @@
                 <div class="card">
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/" alt="project-name">
+                            <img src="/assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -108,7 +108,7 @@
                 <div class="card">
                     <div class="project-image-container">
                         <a href="/assets/pages/projects/placeholderName.html">
-                            <img src="/assets/images/" alt="project-name">
+                            <img src="/assets/images/hero-image.jpg" alt="project-name">
                         </a>
                     </div>
                     <div class="project-name-container">
@@ -118,9 +118,22 @@
             </div>
         </main>
         <footer>
-            <small>
-                Copyright © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
-            </small>
+            <div class="copyright">
+                <small>
+                    Copyright © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
+                </small>
+            </div>
+            <div class="footer-links">
+                <a class="instagram" href="https://instagram.com" target="_blank" rel="noreferrer noopener">
+                    <img src="/assets/images/icons/instagram.png" alt="instagram">
+                </a>
+                <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
+                    <img src="/assets/images/icons/linkedin.png" alt="linkedin">
+                </a>
+                <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
+                    <img src="/assets/images/icons/facebook.png" alt="facebook">
+                </a>
+            </div>
         </footer>
         <script src="/assets/js/script.js"></script>
     </body>
