--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -26,7 +26,7 @@
         <main class="about-main">
             <div class="about-container">
                 <div class="headshot">
-                    <img src="" alt="Headshot">
+                    <img src="/assets/images/450780920_10161959311058538_4963602717402185664_n.jpg" alt="Headshot">
                 </div>
                 <div class="text-box">
                     <h1>I'm Maren Stenersen</h1>
