--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Contact</title>
-        <link rel="stylesheet" href="/assets/styles/style.css">
+        <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -26,7 +26,17 @@
         <main class="contact-main">
             <div class="contact-container">
                 <div class="info">
-                    
+                    <div class="info-email">
+                        <img src="" alt="email-icon">
+                        <p>example.email@gmail.com</p>
+                    </div>
+                    <div class="info-location">
+                        <img src="" alt="location-icon">
+                        <p>5063 Bergen</p>
+                    </div>
+                </div>
+                <div class="socials">
+                    <p>Socials</p>
                 </div>
                 <div class="links">
                     <a class="instagram" href="https://instagram.com" target="_blank" rel="noreferrer noopener">
