--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="info-location">
                         <img src="" alt="location-icon">
-                        <p>5063 Bergen</p>
+                        <p>Bergen</p>
                     </div>
                 </div>
                 <div class="socials">
