--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Contact</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/assets/styles/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -25,6 +25,9 @@
         </header>
         <main class="contact-main">
             <div class="contact-container">
+                <div class="hero-title">
+                    <p>Get in touch</p>
+                </div>
                 <div class="info">
                     <div class="info-email">
                         <img src="" alt="email-icon">
