--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="/android-chrome-192x192.png" alt="logo">
             </div>
             <div class="nav">
-                <a class="active" href="/">Projects</a>
+                <a class="active" href="/index.html">Projects</a>
                 <a class="nav-button" href="/assets/pages/about.html">About</a>
                 <a class="nav-button" href="/assets/pages/contact.html">Contact</a>
             </div>
