--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -5,22 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Contact</title>
-        <link rel="stylesheet" href="assets/styles/style.css">
+        <link rel="stylesheet" href="../styles/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-        <link rel="manifest" href="site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../../favicon-16x16.png">
+        <link rel="manifest" href="../../site.webmanifest">
     </head>
     <body>
         <header>
             <div class="logo">
-                <img src="android-chrome-192x192.png" alt="logo">
+                <img src="../../android-chrome-192x192.png" alt="logo">
             </div>
             <div class="nav">
-                <a class="nav-button" href="index.html">Projects</a>
-                <a class="nav-button" href="assets/pages/about.html">About</a>
-                <a class="active" href="assets/pages/contact.html">Contact</a>
+                <a class="nav-button" href="../../index.html">Projects</a>
+                <a class="nav-button" href="../pages/about.html">About</a>
+                <a class="active" href="../pages/contact.html">Contact</a>
             </div>
         </header>
         <main class="contact-main">
@@ -43,13 +43,13 @@
                 </div>
                 <div class="links">
                     <a class="instagram" href="https://instagram.com" target="_blank" rel="noreferrer noopener">
-                        <img src="assets/images/icons/instagram.png" alt="instagram">
+                        <img src="../images/icons/instagram.png" alt="instagram">
                     </a>
                     <a class="linkedin" href="https://www.linkedin.com" target="_blank" rel="noreferrer noopener">
-                        <img src="assets/images/icons/linkedin.png" alt="linkedin">
+                        <img src="../images/icons/linkedin.png" alt="linkedin">
                     </a>
                     <a class="facebook" href="https://www.facebook.com" target="_blank" rel="noreferrer noopener">
-                        <img src="assets/images/icons/facebook.png" alt="facebook">
+                        <img src="../images/icons/facebook.png" alt="facebook">
                     </a>
                 </div>
             </div>
@@ -59,6 +59,6 @@
                 Copyright © <script>document.write(new Date().getFullYear())</script> by Maren Stenersen. All Rights Reserved.
             </small>
         </footer>
-        <script src="assets/js/script.js"></script>
+        <script src="../js/script.js"></script>
     </body>
 </html>
