Styling contact.html

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -26,15 +26,15 @@
         <main class="contact-main">
             <div class="contact-container">
                 <div class="hero-title">
-                    <p>Get in touch</p>
+                    <p>Get In Touch</p>
                 </div>
                 <div class="info">
                     <div class="info-email">
-                        <img src="" alt="email-icon">
+                        <img src="../images/icons/email.png" alt="email-icon">
                         <p>example.email@gmail.com</p>
                     </div>
                     <div class="info-location">
-                        <img src="" alt="location-icon">
+                        <img src="../images/icons/placeholder.png" alt="location-icon">
                         <p>Bergen</p>
                     </div>
                 </div>
