--- a/assets/pages/projects/placeholderName.html
+++ b/assets/pages/projects/placeholderName.html
@@ -30,12 +30,12 @@
                 </a>
             </div>
             <div class="project-container">
-                <div class="title">
-                    <h1>Project-name</h1>
-                    <p>Sample text, brief description</p>
+                <div class="hero-text">
+                    <p class="project-title">Project-name</p>
+                    <p class="project-desc">Sample text, brief description</p>
                 </div>
                 <div>
-                    
+                    <img src="" alt="">
                 </div>
             </div>
         </main>
