--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -29,7 +29,7 @@
                     <img src="../images/450780920_10161959311058538_4963602717402185664_n.jpg" alt="Headshot">
                 </div>
                 <div class="text-box">
-                    <h1>I'm Maren Stenersen</h1>
+                    <p class="h1">I'm Maren Stenersen</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus neque eius distinctio, alias, vero exercitationem, nobis voluptatem delectus saepe magni commodi consectetur cumque unde vel possimus sint vitae eaque laudantium!</p>
                 </div>
             </div>
