Small changes in contact

--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="info-location">
                         <img src="../images/icons/placeholder.png" alt="location-icon">
-                        <p>Bergen</p>
+                        <p>Bergen, Norway</p>
                     </div>
                 </div>
                 <div class="socials">
