--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="text-box">
                     <p class="h1">I'm Maren Stenersen</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus neque eius distinctio, alias, vero exercitationem, nobis voluptatem delectus saepe magni commodi consectetur cumque unde vel possimus sint vitae eaque laudantium!</p>
+                    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus neque eius distinctio, alias, vero exercitationem, nobis voluptatem delectus saepe magni commodi consectetur cumque unde vel possimus sint vitae eaque laudantium!</p>
                 </div>
             </div>
         </main>
