--- a/assets/pages/projects/placeholderName.html
+++ b/assets/pages/projects/placeholderName.html
@@ -32,10 +32,7 @@
                 </div>
                 <div class="hero-text">
                     <p class="project-title">Project-name</p>
-                    <p class="project-desc">Sample text, brief description</p>
-                </div>
-                <div>
-                    <img src="" alt="">
+                    <p class="project-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus quia rem veniam ea. Error, modi praesentium? Quod deleniti, soluta ut earum exercitationem ab facilis sint ea, porro reiciendis cum quis!</p>
                 </div>
             </div>
         </main>
