dark mode button toggle

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <a class="nav-button" href="assets/pages/about.html">About</a>
                 <a class="nav-button" href="assets/pages/contact.html">Contact</a>
             </div>
+            <div class="dark-mode-toggle">
+                <button onclick="toggleDarkMode()">Dark Mode</button>
+            </div>
         </header>
         <main>
             <div class="showcase">
